@@ -32,12 +32,12 @@ pixmap_DATA = \
 
 schemadir   = @GCONF_SCHEMA_FILE_DIR@
 schema_DATA = procman.schemas	
-	
+
 EXTRA_DIST = \
 	README.hacking \
 	$(pixmap_DATA) \
 	$(schema_DATA)
-	
+
 install-data-local:
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
-	gconftool --makefile-install-rule $(schema_DATA)	  	
+	gconftool-2 --makefile-install-rule $(schema_DATA)	  	
