@@ -1,3 +1,7 @@
+2002-01-15  Kevin Vandersloot <kfv101@psu.edu>
+
+	* Makefile.am: call gconftool-2 and remove unneded tab spaces
+
 2002-01-12  Kevin Vandersloot <kfv101@psu.edu>
 
 	* Makefile.am: small fix for the schemas file for making rpms
